Set overflow to hidden to prevent scrollbars in case of very large qTips.

--- a/css/core.css
+++ b/css/core.css
@@ -265,6 +265,8 @@ body {
 
     padding: 0;
     margin: 0;
+
+    overflow: hidden;
 }
 
 @media (orientation: portrait) {
